--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -2,10 +2,18 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="./public/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      property="og:description"
+      content="EndFlix is a clone of popular video streaming website Netflix. It provides functionality for creating an account, making profiles, adding movies to My List, searching for movies, and playing movies."
+    />
+    <meta property="og:title" content="EndFlix" />
+    <meta property="og:image" content="../endflixmain.gif" />
+    <meta property="og:url" content="https://endflixv2.onrender.com/" />
     <!-- <link rel="stylesheet" href="/src/index.css" /> -->
-    <title>Vite + React</title>
+    <title>EndFlix</title>
   </head>
   <body>
     <div id="root"></div>
